--- a/src/launcher/css/style.css
+++ b/src/launcher/css/style.css
@@ -36,15 +36,14 @@ button {
 }
 
 #editorDescriptionInput {
-    padding: 0px;
     width: 100%;
     height: 72px;
+    padding: 1px 2px;
 }
 
-#editorNameInput {
+.editorLineInput {
     min-width: 0px;
     width: 100%;
-    margin-left: 5px;
 }
 
 .row {
@@ -85,13 +84,24 @@ input[type="radio"]:checked + label {
     background-color: lightpink;
 }
 
+.editorListLabel {
+    display: block;
+    padding-left: 5px;
+}
+
 .editorListLabel:hover {
     background-color: rgb(255,211,214);
 }
 
-.editorListLabel {
-    display: block;
-    padding-left: 5px;
+.editorTypeLabel {
+    border: 1px solid black;
+    border-radius: 2px;
+    padding-left: 2px;
+    padding-right: 2px;
+}
+
+.editorTypeLabel:hover {
+    background-color: rgb(255,211,214);
 }
 
 .credits {
